--- a/templates/static/assets/css/style.css
+++ b/templates/static/assets/css/style.css
@@ -23,12 +23,16 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+p{
+    margin: 0% !important;
+}
+
+body{
+    background-color: var(--cor6) !important;
+}
+
 .container-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: var(--cor3) ;
+    background-color: var(--cor3);
 }
 
 .header-top{
@@ -38,11 +42,11 @@
     justify-content: space-between;
     width: 100%;
     padding: 10px 50px 10px 50px;
-    
+    background-color: #1e2731 ;
 }
 
 #menuopcoes{
-    background: var(--cor2);
+    background: var(--cor3);
     border: none;
     border-radius: 10px;
     margin: 10px 0px 10px 0px;
@@ -69,13 +73,8 @@
 #menu-bottom {
     padding: 10px;
     width: 98%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-    flex-wrap: wrap; 
     gap: 15px; 
 }
 
@@ -84,13 +83,15 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+
     height: 30px;
     padding: 2px 5px 2px 10px;
-    background-color: var(--cor2);
-    width: 100%; 
-    max-width: 232px;
+    background-color:#636262 ;
+    width: 70%; 
     border-radius: 10px;
-    margin: 0px auto; 
+    margin: 0px ; 
+    box-shadow: -1px -1px black;
+    border: 1px solid var(--cor6);
 }
 
 #input-busca {
@@ -115,14 +116,25 @@
     align-items: center;
 }
 
+.container-dates{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.dates{
+    display: flex;
+    flex-direction: column;
+    color: var(--cor8);
+    font-weight: bold;
+}
+
+
 /* Estilo para os selects */
-#select-modalidade,
-#select-unidade,
-#linhas {
-    width: 100%; 
-    max-width: 250px; 
+.select {
+    max-width: 450px; 
     height: 30px;
-    padding-left: 10px;
+    padding: 0px 10px 0px 10px;
     border-radius: 10px;
     background-color: var(--cor2);
     color: var(--cor8);
@@ -142,14 +154,7 @@
     font-weight: bolder;
 }
 
-.responsive-container,
-.responsive-containerB {
-    display: flex;
-    flex-direction: row;
-    align-items: center; 
-    justify-content: center; 
-    gap: 10px; 
-}
+
 
 
 @media (max-width: 768px) {
@@ -185,42 +190,22 @@
     }
 }
 
-
 /* fim menus */
 
-#container-table {
-    display: flex;
-    flex-direction: column; 
-    margin-top: 50px;
+.table-responsive{
+    overflow-x: scroll;
 }
 
-.container-checkbox{
-    background-color: #2d343f;
-    padding: 20px;
-    width: 35%;
-    border-radius: 10px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-}
-
-#flexRadioDefault1, #flexRadioDefault2{
-    background-color: var(--cor7) !important;
-    border: var(--cor1) !important;
-}
-
-.form-check-label{
-    color: var(--cor8) !important;
-}
 table {
     border-collapse: collapse;
     overflow: hidden; 
     border-spacing: 0;
     width: 100%;
+
 }
 
 th, td {
     padding: 10px;
-    text-align: left;
     border: 1px solid ;
 }
 
@@ -234,6 +219,7 @@ tr{
     background-color: var(--cor5);
     color:var(--cor8) ;
     font-weight: 600;
+    height: 20px;
 }
 
 tr:nth-child(even) {
@@ -244,27 +230,21 @@ tr:hover {
     background-color: var(--cor6);
 }
 
-@media screen and (max-width: 740px) {
-    table, thead, tbody, th, td, tr {
-        display: block;
-    }
-    tr {
-        margin-bottom: 10px;
-    }
-    th, td {
-        text-align: left;
-        padding-left: 50%;
-        position: relative;
-    }
-    th::before, td::before {
-        position: absolute;
-        left: 10px;
-    }
+.btn-situacao, label{
+    display: inline-block;
+    vertical-align: middle
 }
+
+.btn-table{
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
 
 /* bootstrap */
 
-.filter-button {
+/* .filter-button {
     background-color: var(--cor2) !important; 
     color: var(--cor8) !important; 
     width: 200px;
@@ -287,4 +267,9 @@ tr:hover {
     background-color: var(--cor2) !important;
     color: var(--cor8) !important;
     border: none;
+} */
+
+.btn-drop{
+    background-color: var(--cor3) !important;
+    border: none !important;
 }
