--- a/templates/global/laudario.html
+++ b/templates/global/laudario.html
@@ -56,6 +56,7 @@
                 <option value="Ressonância">Ressonância</option>
                 <option value="Ultrassonografia">Ultrassonografia</option>
                 <option value="Tomografia">Tomografia</option>
+                <option value="Radiografia">Radiografia</option>
                 <option value=""></option>
               </select>
 
@@ -97,10 +98,10 @@
                   <option value=""></option>
                 </select>
 
-                <button type="button" class="btn  btn-sm btn-danger">Pesquisar   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <button type="button" id="btn-pesquisar" class="btn  btn-sm btn-danger">Pesquisar   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                 </svg></button>
-                <button type="button" class="btn  btn-sm btn-danger">Limpar <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                <button type="button" id="btn-limpar" class="btn  btn-sm btn-danger">Limpar <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
                 </svg></button>
 
@@ -134,19 +135,18 @@
               <td>05/12/2024</td>
               <td>14:30</td>
               <td>Ressonância Magnética</td>
-              <td id="description-table">  
-                <p>Ressonância Magnética de Joelho Direitol</p>
-                
-                <button class="btn-table">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d6d6d6" class="bi bi-chat-fill" viewBox="0 0 16 16">
-                    <path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/>
-                  </svg>
-                </button>
+              
+              <td class="position-td">
+                <p>Ressonância Magnética de Joelho Direito</p>
+
+                <img class="img-description" src="{% static 'assets/imgs/chat-fill.svg'%}" alt="emoji chat box">
               </td>
-              <td id="situacao-table">
-                <label for="btn-situacao">Assinado</label>
-                <input type="button" name="btn-situacao" class="btn-situacao" value="">
+              
+              <td class="position-tdB">
+                <label for="btn-assinado">Assinado</label>
+                <input type="button" name="btn-assinado" class="btn-assinado" value="">
               </td>
+              
               <td>Ortopedia</td>
               <td>Dr. Pedro Almeida</td>
               <td>Hospital Central</td>
@@ -161,21 +161,23 @@
                 </a>
               </td>
             </tr>
+
             <tr>
               <td>Maria Oliveira (F) & (34)</td>
               <td>03/12/2024</td>
               <td>10:00</td>
               <td>Ultrassonografia</td>
-              <td id="description-table">  
-                <p>Ultrassom Abdominal</p>
 
-                <button class="btn-table">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d6d6d6" class="bi bi-chat-fill" viewBox="0 0 16 16">
-                    <path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/>
-                  </svg>
-                </button>
+              <td class="position-td">
+                <p>Ultrassom abdomen</p>
+
+                <img class="img-description" src="{% static 'assets/imgs/chat-fill.svg'%}" alt="emoji chat box">
               </td>
-              <td>Pendente</td>
+
+              <td class="position-tdB">
+                <label for="btn-cancelado">Cancelado</label>
+                <input type="button" name="btn-cancelado" class="btn-cancelado" value="">
+              </td>
               <td>Gastroenterologia</td>
               <td>Dr. Lucas Mendes</td>
               <td>Clínica Vida</td>
@@ -190,20 +192,23 @@
                 </a>
               </td>
             </tr>
+
             <tr>
               <td>Carlos Ferreira (M) & (62)</td>
               <td>04/12/2024</td>
               <td>09:00</td>
               <td>Tomografia Computadorizada</td>
-              <td id="description-table">  
-                <p>Tomografia tórax </p>
-                
-                <button class="btn-table">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d6d6d6" class="bi bi-chat-fill" viewBox="0 0 16 16">
-                    <path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/>
-                  </svg>
-                </button>
-              <td>Concluído</td>
+              
+              <td class="position-td">
+                <p>Tomografia Tórax</p>
+
+                <img class="img-description" src="{% static 'assets/imgs/chat-fill.svg'%}" alt="emoji chat box">
+              </td>
+
+              <td class="position-tdB">
+                <label for="btn-informativo">Informativo</label>
+                <input type="button" name="btn-informativo" class="btn-informativo" value="">
+              </td>
               <td>Pneumologia</td>
               <td>Dra. Ana Costa</td>
               <td>Hospital Regional</td>
@@ -223,16 +228,17 @@
               <td>05/12/2024</td>
               <td>11:15</td>
               <td>Radiografia</td>
-              <td class="description-table">  
-                <p>Tomografia de Tórax</p>
-                
-                <button class="btn-table">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d6d6d6" class="bi bi-chat-fill" viewBox="0 0 16 16">
-                    <path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/>
-                  </svg>
-                </button>
+              
+              <td class="position-td">
+                <p>Radiografia corpo</p>
+
+                <img class="img-description" src="{% static 'assets/imgs/chat-fill.svg'%}" alt="emoji chat box">
               </td>
-              <td>Concluído</td>
+
+              <td class="position-tdB">
+                <label for="btn-assinado">Assinado</label>
+                <input type="button" name="btn-assinado" class="btn-assinado" value="">
+              </td>
               <td>Neurologia</td>
               <td>Dr. Eduardo Pereira</td>
               <td>Clínica São Lucas</td>
@@ -252,15 +258,17 @@
               <td>02/12/2024</td>
               <td>13:45</td>
               <td>Ecocardiograma</td>
-              <td class="description-table">  
+
+              <td class="position-td">
                 <p>Ecocardiograma com Doppler</p>
-                <button class="btn-table">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d6d6d6" class="bi bi-chat-fill" viewBox="0 0 16 16">
-                    <path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/>
-                  </svg>
-                </button>
+
+                <img class="img-description" src="{% static 'assets/imgs/chat-fill.svg'%}" alt="emoji chat box">
               </td>
-              <td>Concluído</td>
+
+              <td class="position-tdB">
+                <label for="btn-assinado">Assinado</label>
+                <input type="button" name="btn-assinado" class="btn-assinado" value="">
+              </td>
               <td>Cardiologia</td>
               <td>Dra. Mariana Andrade</td>
               <td>Instituto do Coração</td>
@@ -283,5 +291,6 @@
 
 </footer>
 <script src="{% static 'assets/js/provisorio.js' %}" ></script>
+<script src="{% static 'assets/js/filtertask.js' %}"></script>
 </body>
 </html>
