--- a/templates/global/laudario.html
+++ b/templates/global/laudario.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Laudario</title>
     <style>
-        :root {
+        /* :root {
             --cor1: #e0363b;
             --cor2: #585858;
             --cor3: #323a47;
@@ -132,7 +132,7 @@
         }
 
         /* Responsividade para telas menores ou iguais a 1000px */
-        @media (max-width: 1000px) {
+        /* @media (max-width: 1000px) {
             .container-main {
                 flex-direction: column;
                 align-items: center;
@@ -157,7 +157,7 @@
                 font-size: 0.8rem;
                 height: 35px;
             }
-        }
+        } */ 
     </style>
 </head>
 <body>
