--- a/templates/static/assets/css/style.css
+++ b/templates/static/assets/css/style.css
@@ -15,6 +15,7 @@
     --cor6:#1d232f ; 
     --cor7: #92181c;
     --cor8:#d6d6d6;
+    --cor09: #2b3446;
  }
  
  *{
@@ -59,6 +60,10 @@ body{
 
 .sub-header > a{
     text-decoration: none;
+}
+
+.sub-header > h4{
+    color: var(--cor8);
 }
 
 .img-perfil{
@@ -319,4 +324,132 @@ tr:hover {
     background-color: var(--cor7);
     border: none;
     border-radius: 50%;
+}
+
+/*  inicio laudario */
+
+.container-main {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    padding: 20px;
+}
+
+.container-rigth {
+    width: 40%;
+}
+
+.container-inputs, .container-dados {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--cor09);
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    width: 100%;
+    color: var(--cor8);
+}
+
+.container-inputs > label {
+    margin-bottom: 5px;
+    color: var(--cor8);
+}
+
+.inputs-mascaras {
+    background-color: var(--cor8);
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    height: 30px;
+    color: black;
+    font-size: 13px;
+}
+
+.dados-laudo {
+    text-align: left;
+    font-weight: bold;
+}
+
+.CR {
+    background-color: transparent;
+    outline: none;
+    border: 1px solid var(--cor8);
+    padding: 5px;
+    font-size: 0.8rem;
+    width: auto;
+    color: var(--cor8);
+    transition: 0.1s ease;
+}
+
+.CR:hover {
+    transform: scale(0.95);
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.alinhamento {
+    display: flex;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.button-laudo {
+    height: 40px;
+    border: none;
+    outline: none;
+    transition: 0.2s ease;
+    background-color: var(--cor7);
+    border-radius: 10px;
+    color: var(--cor8);
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.button-laudo:active {
+    transform: scale(0.97);
+}
+
+.button-padding {
+    padding: 5px;
+}
+
+/* Responsividade para telas menores ou iguais a 1000px */
+@media (max-width: 1000px) {
+    .container-main {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .container-rigth {
+        width: 100%;
+    }
+
+    .buttons {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .CR {
+        font-size: 0.7rem;
+        padding: 2px;
+    }
+
+    .button-laudo {
+        font-size: 0.8rem;
+        height: 35px;
+    }
 }
