--- a/templates/global/laudario.html
+++ b/templates/global/laudario.html
@@ -4,164 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}?v=1">
+    <link rel="stylesheet" href="{% static 'assets/css/partials.css'%}">
+    <link rel="stylesheet" href="../static/assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.tiny.cloud/1/so3qfi9exwyon8gi9xspijwplkefjswvvum3cpy6nigg32ig/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Laudario</title>
-    <style>
-        /* :root {
-            --cor1: #e0363b;
-            --cor2: #585858;
-            --cor3: #323a47;
-            --cor5: #3e454e;
-            --cor6: #1d232f;
-            --cor7: #92181c;
-            --cor8: #d6d6d6;
-            --cor09: #2b3446;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            color: #d6d6d6;
-            background-color: var(--cor6);
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-        }
-
-        .container-main {
-            display: flex;
-            justify-content: space-around;
-            gap: 20px;
-            padding: 20px;
-        }
-
-        .container-rigth {
-            width: 40%;
-        }
-
-        .container-inputs, .container-dados {
-            display: flex;
-            flex-direction: column;
-            background-color: var(--cor09);
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 15px;
-            width: 100%;
-        }
-
-        .container-inputs > label {
-            margin-bottom: 5px;
-        }
-
-        .inputs-mascaras {
-            background-color: var(--cor8);
-            outline: none;
-            border: none;
-            border-radius: 5px;
-            padding: 5px;
-            height: 30px;
-            color: black;
-            font-size: 13px;
-        }
-
-        .dados-laudo {
-            text-align: left;
-            font-weight: bold;
-        }
-
-        .CR {
-            background-color: transparent;
-            outline: none;
-            border: 1px solid var(--cor8);
-            padding: 5px;
-            font-size: 0.8rem;
-            width: auto;
-            color: var(--cor8);
-            transition: 0.1s ease;
-        }
-
-        .CR:hover {
-            transform: scale(0.95);
-        }
-
-        .buttons {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-top: 10px;
-        }
-
-        .alinhamento {
-            display: flex;
-        }
-
-        ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-        }
-
-        .button-laudo {
-            height: 40px;
-            border: none;
-            outline: none;
-            transition: 0.2s ease;
-            background-color: var(--cor7);
-            border-radius: 10px;
-            color: var(--cor8);
-            font-weight: 700;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 5px;
-        }
-
-        .button-laudo:active {
-            transform: scale(0.97);
-        }
-
-        .button-padding {
-            padding: 5px;
-        }
-
-        /* Responsividade para telas menores ou iguais a 1000px */
-        /* @media (max-width: 1000px) {
-            .container-main {
-                flex-direction: column;
-                align-items: center;
-                gap: 20px;
-            }
-
-            .container-rigth {
-                width: 100%;
-            }
-
-            .buttons {
-                flex-direction: column;
-                gap: 10px;
-            }
-
-            .CR {
-                font-size: 0.7rem;
-                padding: 2px;
-            }
-
-            .button-laudo {
-                font-size: 0.8rem;
-                height: 35px;
-            }
-        } */ 
-    </style>
 </head>
 <body>
     {% include 'global/partials/header.html' %}
+    <!-- <header>
+        <img src="{% static 'assets/imgs/Logo-impixel-removebg-preview.png' %}" alt="Logo impixel"  width="45px" height="40px">
+
+        <a class="a-header-laudario" href="{% url 'tabelaLaudos' %}">
+            <button type="button" class="btn button-back border-0" data-bs-container="body" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Voltar para tabela de pacientes" style="background-color: #92181c;">
+                <img src="{% static 'assets/imgs/arrow-left.svg'%}" alt="emoji seta virada para esquerda"  width="19px" height="19px">
+            </button>
+        </a>
+
+        <section class="avatar-header">
+            <img  class="img-perfil" src="{% static 'assets/imgs/fotopadraoperfil.png' %}" alt="foto de perfil médico">
+            <p> Médico Italo</p>
+        </section>
+          
+    </header> -->
     <main>
         <section class="container-main">
             <textarea></textarea>
@@ -223,5 +91,14 @@
             ai_request: (request, respondWith) => respondWith.string(() => Promise.reject('See docs to implement AI Assistant')),
             });
     </script>
+      <script>
+        // Inicializar todos os popovers
+        document.addEventListener('DOMContentLoaded', function () {
+          const popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'));
+          popoverTriggerList.map(function (popoverTriggerEl) {
+            return new bootstrap.Popover(popoverTriggerEl);
+          });
+        });
+      </script>
 </body>
 </html>
