--- a/templates/global/tabelaLaudos.html
+++ b/templates/global/tabelaLaudos.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela laudos</title>
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}?v=1">
+    <link rel="stylesheet" href="../static/assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<header>
+<header >
 
     <div class="container-center">
         <section class="header-top">
-            <figure> <img src="{% static '../static/assets/imgs/Logo-impixel-removebg-preview.png' %}" alt="" width="65px" height="55px"></figure>
-            <button id="menuopcoes"><img src="{% static '../static/assets/imgs/justify (1).svg' %}" alt="Clique e abra o menu"  class="img-header" ></button>
+            <figure> <img src="{% static '../static/assets/imgs/Logo-impixel-removebg-preview.png' %}" alt="" width="45px" height="35px"></figure>
+            <!-- Button para esconder o filtro -->
+            <!-- <button id="menuopcoes"><img src="{% static '../static/assets/imgs/justify (1).svg' %}" alt="Clique e abra o menu"  class="img-header" ></button> -->
 
             <button type="button" class="btn btn-header btn-primary position-relative  border-0">
               <img class="img-perfil" src="{% static 'assets/imgs/fotopadraoperfil.png' %}" alt="">
@@ -96,7 +98,7 @@
                   <option value=""></option>
                 </select>
 
-                <button type="button" id="btn-pesquisar" class="btn  btn-sm btn-danger" onclick="search">Pesquisar   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <button type="button" id="btn-pesquisar" class="btn  btn-sm btn-danger border-0" onclick="search">Pesquisar   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                 </svg></button>
                 <button type="button" id="btn-limpar" class="btn  btn-sm btn-danger" onclick="clear" >Limpar 
@@ -130,13 +132,14 @@
             </tr>
           </thead>
           <tbody id="tabela-dados">
-            <tr>
+            <tr  data-bs-toggle="collapse" data-bs-target="#content3" aria-expanded="false">
+              
               <td>João Silva (M) & (45)</td>
               <td>05/12/2024</td>
               <td>14:30</td>
               <td>Ressonância Magnética</td>
-              
-              <td class="position-td">
+                    
+              <td  class="position-td">
                 <p>Ressonância Magnética de Joelho Direito</p>
                 <img class="img-description" src="{% static 'assets/imgs/chat-fill.svg'%}" alt="emoji chat box">
               </td>
@@ -159,6 +162,47 @@
                   </button>
                 </a>
               </td>
+              <tr id="content3" class="collapse">
+                <td colspan="10"> 
+                  <div class="p-3">
+                    <h4 class="titulo-accordion"> Detalhes do pacientes</h4>
+      
+                    <div class="alinhar-accordion">
+                      <div class="informacoes-paciente">
+                        <h6>CPF</h6>
+                        <p> 000000-0000</p>
+                      </div>
+
+                      <div class="informacoes-paciente">
+                        <h6>CPF</h6>
+                        <p> 000000-0000</p>
+                      </div>
+
+                      <div class="informacoes-paciente">
+                        <h6>CPF</h6>
+                        <p> 000000-0000</p>
+                      </div>
+                    </div>
+
+                    <div class="alinhar-accordion">
+                      <div class="informacoes-paciente">
+                        <h6>CPF</h6>
+                        <p> 000000-0000</p>
+                      </div>
+
+                      <div class="informacoes-paciente">
+                        <h6>CPF</h6>
+                        <p> 000000-0000</p>
+                      </div>
+
+                      <div class="informacoes-paciente">
+                        <h6>CPF</h6>
+                        <p> 000000-0000</p>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
             </tr>
 
             <tr>
