--- a/templates/static/assets/css/style.css
+++ b/templates/static/assets/css/style.css
@@ -345,12 +345,13 @@ tr:hover {
     justify-content:right;
     padding: 20px 20px 0px 0px;
     width: 95%;
-    height: 100%;
+    height: 92vh;
     float: right;
 }
 
 .container-rigth {
     width: 40%;
+    margin-left: 15px;
 }
 
 .container-inputs, .container-dados {
@@ -404,7 +405,6 @@ tr:hover {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-top: 10px;
 }
 
 .alinhamento {
@@ -417,27 +417,13 @@ ul {
     list-style: none;
 }
 
-.button-laudo {
-    height: 40px;
-    border: none;
-    outline: none;
-    transition: 0.2s ease;
-    background-color: var(--cor7);
-    border-radius: 10px;
-    color: var(--cor8);
-    font-weight: 700;
+
+
+.alinhamento-horizontal{
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    gap: 5px;
-}
-
-.button-laudo:active {
-    transform: scale(0.97);
-}
-
-.button-padding {
-    padding: 5px;
+    justify-content: space-between;
 }
 
 /* Responsividade para telas menores ou iguais a 1000px */
@@ -503,4 +489,54 @@ ul {
     border-radius: 5px;
     text-align: center;
     margin: 0px !important;
+}
+
+
+.button-laudo {
+    height: 40px;
+    border: none;
+    outline: none;
+    transition: 0.2s ease;
+    background-color: var(--cor7);
+    border-radius: 10px;
+    color: var(--cor8);
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.button-modal{
+    height: 40px;
+    width: 50%;
+    border: none;
+    outline: none;
+    background-color: var(--cor7);
+    border-radius: 10px;
+    color: var(--cor8);
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-laudo:active {
+    transform: scale(0.97);
+}
+
+.button-padding {
+    padding: 5px;
+}
+
+.modal-content {
+    background-color: var(--cor09) !important; /* Cor de fundo */
+    color:var(--cor8)!important; /* Cor do texto */
+    border-radius: 10px; /* Deixa as bordas arredondadas */
+}
+
+.modal-body > h5 {
+    border: none;
+    height: 2px;
+    background-color: var(--cor8) !important;
 }
